# OpenRedukti

./: .clang-format  CMakeLists.txt  README.md  README.rst  THIRD_PARTY_LICENSE
cmake/: FindGRPC.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindPROTOBUF.cmake  cminpack.cmake  generators.cmake  protos.cmake  ravi.cmake
cminpack/include/: cminpackP.h
cpp/: allocators.cpp  allocators.h  autodiff.cpp  autodiff.h  bootstrap.cpp  bootstrap.h  buffer.h  calendars.cpp  calendars.h  cashflow.cpp  cashflow.h  cashflow_pricing.cpp  cashflow_pricing.h  converters.cpp  converters.h  curve.cpp  curve.h  datasource.cpp  datasource.h  date.cpp  date.h  dayfractions.cpp  dayfractions.h  fixings.cpp  fixings.h  hashtable.cpp  hashtable.h  index.cpp  index.h  interpolators.cpp  interpolators.h  linalg.h  logger.cpp  logger.h  matrix.c  matrix.h  raviapi.cpp  request_processor.cpp  request_processor.h  runtests.cpp  (+10 more)
cpp/internal/: autodiff_helpers.h  cashflow_internal.h  cashflow_pricing_internal.h  raviapi_internal.h
docker/alpine-openredukti/: Dockerfile
docker/linux/redukti-grpc-server/: Dockerfile
docker/linux/redukti-ubuntu-base/: Dockerfile
docker/linux/redukti-ubuntu-pyredukti/: Dockerfile
docker/linux/redukti-ubuntu-risk-base/: Dockerfile
docker/manylinux-pyredukti/: Dockerfile  build.sh
docs/: Makefile  Sensitivities.tex  conf.py  index.rst  make.bat  openredukti-building.rst  openredukti-cpp-api.rst  openredukti-intro.rst  openredukti-ravi-api.rst
grpc-server/: grpcmain.cpp
proto/: bootstrap.proto  cashflow.proto  common.proto  curve.proto  enums.proto  generate_protos.bat  generate_protos.sh  index.proto  infra.proto  schedule.proto  services.proto  shared.proto  valuation.proto
proto/redukti/: bootstrap.proto  calendar.proto  cashflow.proto  common.proto  curve.proto  enums.proto  index.proto  infra.proto  instrument_templates.proto  schedule.proto  services.proto  shared.proto  valuation.proto
ravi/include/: llimits.h  lualib.h  ravi_asmvm_defs.h
ravi/src/: linit.c  lvm.c
scripts/: pricing.lua
testdata/20121211/: curve_definitions.csv
testdata/bond/: bond_curve_definitions.txt
tests/: test_autodiff.lua  test_bootstrap.lua  test_bootstrap_bondcurve.lua  test_calendars.lua  test_cashflows.lua  test_date.lua  test_fixings.lua  test_index.lua  test_interp.lua  test_pricing.lua  test_schedule.lua  test_zerocurve.lua  utils.lua
